manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${IMAGE_NAME}-svc
  namespace: ${NAMESPACE}
  labels:
    app: ${IMAGE_NAME}
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: ${IMAGE_NAME}
